# LearningC

./: .gitignore  CMakeLists.txt  char-array.c  pointers.c  scanf-example.c  sizeof_types.c
src/: cmdlineargs.c  pointer-types.c  printf-formats.c  scanf-example.c  typecasts.c
